indexing db, search feature, and new endpoint admin
