# app/routes/routes.ts
@@ -6,6 +6,7 @@ import customerRoute from "./v1/customerRoute";
 import rentalRoute from "./v1/rentalRoute";
 import customerDataRoute from "./v1/customerDataRoute";
 import rentalDetailRoute from "./v1/rentalDetailRoute";
+import adminRoute from "./v1/adminRoute";
 
 const router = Router();
 
@@ -16,5 +17,6 @@ router.use("/v1/pelanggan", customerRoute);
 router.use("/v1/data/pelanggan", customerDataRoute);
 router.use("/v1/penyewaan", rentalRoute);
 router.use("/v1/detail/penyewaan", rentalDetailRoute);
+router.use("/v1/admin", adminRoute);
 
 export default router;
